[package]
name = "arc-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.12"
aws-runtime = "1.5.17"
aws-sdk-secretsmanager = "1.97.0"
aws-types = "1.3.11"
chrono = "0.4"
clap = { version = "4.5.53", features = ["derive"] }
cliclack = "0.3.7"
home = "0.5.12"
# kube and k8s-openapi versions need to be compatible.
# Also use appropriate k8s-openapi feature for your k8s cluster version.
k8s-openapi = { version = "0.26.1", default-features = false, features = ["v1_34"] }
kube = { version = "2.0.1", features = ["config"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
topo_sort = "0.4.0"

[[bin]]
name = "arc"
path = "src/main.rs"
